ci: Add per-test timeout
So I can debug why Sable's services test hang

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -457,9 +457,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         bahamut
       timeout-minutes: 30
     - if: always()
@@ -496,9 +496,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH   make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH   make
         bahamut-anope
       timeout-minutes: 30
     - if: always()
@@ -529,9 +529,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         bahamut-atheme
       timeout-minutes: 30
     - if: always()
@@ -569,9 +569,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/go/sbin:~/go/bin:~/go:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/go/sbin:~/go/bin:~/go:$PATH
         make ergo
       timeout-minutes: 30
     - if: always()
@@ -608,9 +608,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH   make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH   make
         hybrid
       timeout-minutes: 30
     - if: always()
@@ -641,9 +641,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH
         make inspircd
       timeout-minutes: 30
     - if: always()
@@ -680,9 +680,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH  make
         inspircd-anope
       timeout-minutes: 30
     - if: always()
@@ -719,9 +719,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         ircu2
       timeout-minutes: 30
     - if: always()
@@ -747,9 +747,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         limnoria
       timeout-minutes: 30
     - if: always()
@@ -785,9 +785,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         nefarious
       timeout-minutes: 30
     - if: always()
@@ -818,9 +818,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH
         make ngircd
       timeout-minutes: 30
     - if: always()
@@ -857,9 +857,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH  make
         ngircd-anope
       timeout-minutes: 30
     - if: always()
@@ -890,9 +890,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH
         make ngircd-atheme
       timeout-minutes: 30
     - if: always()
@@ -929,9 +929,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH   make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH   make
         plexus4
       timeout-minutes: 30
     - if: always()
@@ -976,9 +976,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=$GITHUB_WORKSPACE/sable/target/debug/sbin:$GITHUB_WORKSPACE/sable/target/debug/bin:$GITHUB_WORKSPACE/sable/target/debug:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=$GITHUB_WORKSPACE/sable/target/debug/sbin:$GITHUB_WORKSPACE/sable/target/debug/bin:$GITHUB_WORKSPACE/sable/target/debug:$PATH
         make sable
       timeout-minutes: 30
     - if: always()
@@ -1009,9 +1009,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         solanum
       timeout-minutes: 30
     - if: always()
@@ -1036,9 +1036,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         sopel
       timeout-minutes: 30
     - if: always()
@@ -1074,9 +1074,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         thelounge
       timeout-minutes: 30
     - if: always()
@@ -1107,9 +1107,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
         make unrealircd
       timeout-minutes: 30
     - if: always()
@@ -1140,9 +1140,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
         make unrealircd-5
       timeout-minutes: 30
     - if: always()
@@ -1179,9 +1179,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH  make
         unrealircd-anope
       timeout-minutes: 30
     - if: always()
@@ -1212,9 +1212,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
         make unrealircd-atheme
       timeout-minutes: 30
     - if: always()
@@ -1256,9 +1256,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
         IRCTEST_DLK_PATH="${{ github.workspace }}/Dlk-Services" IRCTEST_WP_CLI_PATH="${{
         github.workspace }}/wp-cli.phar" IRCTEST_WP_ZIP_PATH="${{ github.workspace
         }}/wordpress-latest.zip" make unrealircd-dlk
