--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -500,9 +500,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         bahamut
       timeout-minutes: 30
     - if: always()
@@ -539,9 +539,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH   make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH   make
         bahamut-anope
       timeout-minutes: 30
     - if: always()
@@ -572,9 +572,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         bahamut-atheme
       timeout-minutes: 30
     - if: always()
@@ -605,9 +605,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         charybdis
       timeout-minutes: 30
     - if: always()
@@ -645,9 +645,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/go/sbin:~/go/bin:~/go:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/go/sbin:~/go/bin:~/go:$PATH
         make ergo
       timeout-minutes: 30
     - if: always()
@@ -684,9 +684,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH   make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH   make
         hybrid
       timeout-minutes: 30
     - if: always()
@@ -717,9 +717,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH
         make inspircd
       timeout-minutes: 30
     - if: always()
@@ -756,9 +756,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH  make
         inspircd-anope
       timeout-minutes: 30
     - if: always()
@@ -789,9 +789,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH
         make inspircd-atheme
       timeout-minutes: 30
     - if: always()
@@ -839,9 +839,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         irc2
       timeout-minutes: 30
     - if: always()
@@ -878,9 +878,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         ircu2
       timeout-minutes: 30
     - if: always()
@@ -905,9 +905,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         limnoria
       timeout-minutes: 30
     - if: always()
@@ -943,9 +943,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         nefarious
       timeout-minutes: 30
     - if: always()
@@ -976,9 +976,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH
         make ngircd
       timeout-minutes: 30
     - if: always()
@@ -1015,9 +1015,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH  make
         ngircd-anope
       timeout-minutes: 30
     - if: always()
@@ -1048,9 +1048,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH
         make ngircd-atheme
       timeout-minutes: 30
     - if: always()
@@ -1087,9 +1087,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH   make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH   make
         plexus4
       timeout-minutes: 30
     - if: always()
@@ -1134,9 +1134,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=$GITHUB_WORKSPACE/sable/target/debug/sbin:$GITHUB_WORKSPACE/sable/target/debug/bin:$GITHUB_WORKSPACE/sable/target/debug:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=$GITHUB_WORKSPACE/sable/target/debug/sbin:$GITHUB_WORKSPACE/sable/target/debug/bin:$GITHUB_WORKSPACE/sable/target/debug:$PATH
         make sable
       timeout-minutes: 30
     - if: always()
@@ -1167,9 +1167,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         solanum
       timeout-minutes: 30
     - if: always()
@@ -1194,9 +1194,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         sopel
       timeout-minutes: 30
     - if: always()
@@ -1232,9 +1232,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  make
         thelounge
       timeout-minutes: 30
     - if: always()
@@ -1265,9 +1265,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
         make unrealircd
       timeout-minutes: 30
     - if: always()
@@ -1298,9 +1298,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
         make unrealircd-5
       timeout-minutes: 30
     - if: always()
@@ -1337,9 +1337,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH  make
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH  make
         unrealircd-anope
       timeout-minutes: 30
     - if: always()
@@ -1370,9 +1370,9 @@ jobs:
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
-        pip install pytest pytest-xdist -r requirements.txt
+        pip install pytest pytest-xdist pytest-timeout -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 60' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
         make unrealircd-atheme
       timeout-minutes: 30
     - if: always()
