--- a/workflows.yml
+++ b/workflows.yml
@@ -230,7 +230,7 @@ software:
         name: ngircd
         repository: ngircd/ngircd
         refs:
-            stable: 0714466af88d71d6c395629cd7fb624b099507d4 # two years ahead of rel-26.1
+            stable: 3e3f6cbeceefd9357b53b27c2386bb39306ab353 # three years ahead of rel-26.1
             release: null
             devel: master
             devel_release: null
