Revert "bump inspircd to 4.0 release candidate"
This reverts commit 34534df17f79c0871bb63f86cae4f2583870fd3d.

--- a/workflows.yml
+++ b/workflows.yml
@@ -148,7 +148,7 @@ software:
         name: InspIRCd
         repository: inspircd/inspircd
         refs: &inspircd_refs
-            stable: v4.0.0rc1
+            stable: v3.17.0
             release: null
             devel: master
             devel_release: insp3
