--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -189,7 +189,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: inspircd
-        ref: v4.0.0rc1
+        ref: v3.17.0
         repository: inspircd/inspircd
     - name: Build InspIRCd
       run: |
